tests/Error/YS03xx/YS0310.ys
VAR x = RUN("notAFile") # This will generate a Run Time Error
